--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>ZombieChu</title>
     <link rel ='stylesheet' type = 'text/css' href = 'css/stylesheet.css'>
 </head>
     <body>
