--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         function BackgroundMusic(){
             music.play();
-            document.getElementById('playmusic').innerHTML = 'Mute';
+            document.getElementById('playmusic').innerHTML = 'Pause';
             document.getElementById('playmusic').id = 'mute';
             document.getElementById('mute').onclick = mute;
         }
