--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <img id = 'zombie' src = 'images/zombie.png'>
         <p id = 'score'>Score: 0</p>
+        <p> Jason Quach A01066207 </p>
         <button id = 'volume25'>100%</button>
         <button id = 'endbutton'>End</button>
         <button id = 'playmusic'>Music</button>
