--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>ZombieChu</title>
+    Jason Quach A01066207
     <link rel ='stylesheet' type = 'text/css' href = 'css/stylesheet.css'>
 </head>
     <body>
         <img id = 'zombie' src = 'images/zombie.png'>
         <p id = 'score'>Score: 0</p>
-        <p> Jason Quach A01066207 </p>
         <button id = 'volume25'>100%</button>
         <button id = 'endbutton'>End</button>
         <button id = 'playmusic'>Music</button>
