--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel ='stylesheet' type = 'text/css' href = 'css/stylesheet.css'>
 </head>
     <body>
-        <p>JASON QUACH A01066207</p>
+        <p style="color:white; font-size:100%">JASON QUACH A01066207</p>
         <img id = 'zombie' src = 'images/zombie.png'>
         <p id = 'score'>Score: 0</p>
         <button id = 'volume25'>100%</button>
